--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,70 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity"
-        android:id="@+id/blah"
+        android:id="@+id/MainLayout"
         >
+
+        <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/inputTitle"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginStart="16dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginLeft="16dp"
+                android:hint="@string/hintTitle" android:layout_marginEnd="16dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"/>
+        <EditText
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/inputAuthor"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/inputTitle"
+                app:layout_constraintStart_toStartOf="@+id/inputTitle"
+                android:hint="@string/hintAuthor"
+                app:layout_constraintEnd_toEndOf="@+id/inputTitle"
+        />
+        <CheckBox
+                android:text="@string/lblFinishedReading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/checkBox"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/inputAuthor"
+                app:layout_constraintStart_toStartOf="@+id/inputAuthor"
+        />
+        <Button
+                android:text="@string/lblAddBook"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button"
+                app:layout_constraintEnd_toStartOf="@+id/verticalCenterAlignment"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                app:layout_constraintStart_toStartOf="@+id/verticalCenterAlignment"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/checkBox"/>
+
+        <android.support.constraint.Guideline
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/verticalCenterAlignment"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent=".5"/>
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/lblBookList"
+                app:layout_constraintEnd_toStartOf="@+id/verticalCenterAlignment"
+                app:layout_constraintStart_toStartOf="@+id/verticalCenterAlignment"
+                app:layout_constraintTop_toBottomOf="@+id/button"
+                android:layout_marginTop="24dp"
+                tools:text="List of books"/>
 
 </android.support.constraint.ConstraintLayout>
