--- a/app/src/main/res/layout/linearLayoutExample.xml
+++ b/app/src/main/res/layout/linearLayoutExample.xml
@@ -1,36 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity"
+        android:layout_gravity="center"
+        android:orientation="vertical"
         android:id="@+id/MainLayout"
         >
 
         <EditText
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
                 android:id="@+id/inputTitle"
+                android:hint="@string/hintTitle"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginStart="16dp"
-                app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginLeft="16dp"
-                android:hint="@string/hintTitle" android:layout_marginEnd="16dp"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"/>
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"/>
         <EditText
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
                 android:id="@+id/inputAuthor"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/inputTitle"
-                app:layout_constraintStart_toStartOf="@+id/inputTitle"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
                 android:hint="@string/hintAuthor"
-                app:layout_constraintEnd_toEndOf="@+id/inputTitle"
         />
         <CheckBox
                 android:text="@string/lblFinishedReading"
@@ -38,27 +40,17 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/checkBox"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/inputAuthor"
-                app:layout_constraintStart_toStartOf="@+id/inputAuthor"
-        />
+                android:layout_marginLeft="16dp"
+                android:layout_marginStart="16dp"
+                />
         <Button
                 android:text="@string/lblAddBook"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/button"
                 app:layout_constraintEnd_toStartOf="@+id/verticalCenterAlignment"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
-                app:layout_constraintStart_toStartOf="@+id/verticalCenterAlignment"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/checkBox"/>
-
-        <android.support.constraint.Guideline
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/verticalCenterAlignment"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent=".5"/>
+                android:layout_gravity="center"
+        />
 
         <TextView
                 android:layout_width="wrap_content"
@@ -68,6 +60,7 @@
                 app:layout_constraintStart_toStartOf="@+id/verticalCenterAlignment"
                 app:layout_constraintTop_toBottomOf="@+id/button"
                 android:layout_marginTop="24dp"
+                android:layout_gravity="center"
                 tools:text="List of books"/>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
