--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
                 android:text="@string/lblFinishedReading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/checkBox"
+                android:id="@+id/checkboxFinishedReading"
                 android:layout_marginTop="16dp"
                 app:layout_constraintTop_toBottomOf="@+id/inputAuthor"
                 app:layout_constraintStart_toStartOf="@+id/inputAuthor"
@@ -50,8 +50,9 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 app:layout_constraintStart_toStartOf="@+id/verticalCenterAlignment"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/checkBox"/>
+                app:layout_constraintTop_toBottomOf="@+id/checkboxFinishedReading"
+                android:onClick="onAddBookClick"
+        />
 
         <android.support.constraint.Guideline
                 android:layout_width="wrap_content"
